--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "shaka-player": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
